--- a/version-2/about.html
+++ b/version-2/about.html
@@ -39,7 +39,7 @@
 </div>
 <div class="footer">
   <span class="footer-deets">&copy; Peter Cochrane 2015. All works are available for sale. Photographs of the ceramics and flowers may also be purchased.</span>
-  <ul>
+  <ul class="social-links">
     <li><a href="mailto:pescochrane@gmail.com" class="tooltip"> <span>pescochrane@gmail.com</span><i class="fa fa-lg fa-envelope-o fa-inverse"></i></a></li>
     <li><a href="http://pecoch.tumblr.com/" class="tooltip"><span>pecoch</span><i class="fa fa-lg fa-tumblr fa-inverse"></i></a></li>
     <li><a href="https://instagram.com/pecoch/" class="tooltip"><span>@pecoch</span><i class="fa fa-lg fa-instagram fa-inverse"></i></a></li>
